// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api/queries/getXvsVaultPendingWithdrawalsFromBeforeUpgrade > returns total amount of pending withdrawals before the contract upgrade on success 1`] = `
{
  "pendingWithdrawalsFromBeforeUpgradeWei": "1000",
}
`;

exports[`api/queries/getXvsVaultPendingWithdrawalsFromBeforeUpgrade returns total amount of pending withdrawals before the contract upgrade on success 1`] = `
Object {
  "pendingWithdrawalsFromBeforeUpgradeWei": "1000",
}
`;
